--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "@huggingface/inference": "^2.8.0",
+    "any-date-parser": "^1.5.4",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
     "jsdom": "^24.1.1",
     "node-fetch": "^3.3.2",
     "pg": "^8.12.0"
