--- a/backend/package.json
+++ b/backend/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "@huggingface/inference": "^2.8.0",
     "any-date-parser": "^1.5.4",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "jsdom": "^24.1.1",
     "node-fetch": "^3.3.2",
     "pg": "^8.12.0"
