--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@huggingface/inference": "^2.8.0",
     "any-date-parser": "^1.5.4",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -19,7 +18,8 @@
     "express-session": "^1.18.0",
     "jsdom": "^24.1.1",
     "node-fetch": "^3.3.2",
-    "pg": "^8.12.0"
+    "pg": "^8.12.0",
+    "uid": "^2.0.2"
   },
   "type": "module"
 }
