--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@auth0/auth0-vue": "^2.3.3",
     "@primevue/themes": "^4.0.5",
+    "dotenv": "^16.4.5",
     "pinia": "^2.1.7",
     "primeicons": "^7.0.0",
     "primevue": "^4.0.5",
