--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "jsdom": "^24.1.1",
     "node-fetch": "^3.3.2",
     "pg": "^8.12.0",
+    "puppeteer": "^23.9.0",
     "uid": "^2.0.2"
   },
   "type": "module"
