--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.18.0",
     "jsdom": "^24.1.1",
     "node-fetch": "^3.3.2",
+    "nodemailer": "^6.9.16",
     "pg": "^8.12.0",
     "puppeteer": "^23.9.0",
     "uid": "^2.0.2"
