bugfix(actions): npm install in backend folder

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,7 @@ jobs:
     - name: Deploy backend files
       run: |
         rsync -av --delete backend/ /var/www/quhousefinder.com/backend
+        cd /var/www/quhousefinder.com/backend && npm install
 
     # - name: Restart backend service
     #   run: |
