bugfix(actions): deploy action now copies the env file to the repo before building the frontend

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,7 @@ jobs:
 
     - name: Build Vue.js app
       run: |
+        cp /var/www/quhousefinder.com/.env .env
         cd frontend
         npm install
         npm run build
