--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,7 @@ jobs:
         rsync -av --delete backend/ /var/www/quhousefinder.com/backend
         cd /var/www/quhousefinder.com/backend && npm install
 
-    - name: Restart backend service
+    - name: Restart backend services
       run: |
         pm2 restart api-server
+        pm2 restart web-scraper
